--- a/src/components/FooterAttribution.scss
+++ b/src/components/FooterAttribution.scss
@@ -14,6 +14,6 @@
     color: $STARWARS_COLOR;
     text-decoration: none;
     font-weight: bold;
-    text-shadow: 0.5rem 0.5rem 2rem $TEXT_DARK;
+    text-shadow: 0.5px 0.5px 2px $TEXT_DARK;
   }
 }
