--- a/src/components/PageContent.scss
+++ b/src/components/PageContent.scss
@@ -1,8 +1,8 @@
 .page-content {
   &__container {
     // position: fixed;
-    // top: 52rem;
-    padding-left: 350rem;
+    // top: 52px;
+    padding-left: 350px;
     width: 100%;
     @media all and (max-width: 720px) {
       padding-left: 0;
