--- a/src/components/PersonCell.scss
+++ b/src/components/PersonCell.scss
@@ -4,8 +4,8 @@
   &__container {
     width: 100%;
     @include flex(row, space-between, center);
-    padding: 16rem;
-    border-bottom: 1rem solid rgba(0, 0, 0, 0.1);
+    padding: 16px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     cursor: pointer;
     &:hover {
       background-color: rgba(0, 0, 0, 0.1);
@@ -21,7 +21,7 @@
   }
 
   &__icon {
-    font-size: 12rem;
+    font-size: 12px;
     color: $TEXT_DARK;
   }
 }
