--- a/src/components/PersonDetail.scss
+++ b/src/components/PersonDetail.scss
@@ -2,10 +2,10 @@
 
 .person-detail {
   &__name {
-    font-size: 20rem;
+    font-size: 20px;
     text-align: center;
-    padding: 16rem;
-    margin-top: 52rem;
+    padding: 16px;
+    margin-top: 52px;
     display: block;
     @media all and (max-width: 720px) {
       display: none;
@@ -13,17 +13,17 @@
   }
 
   &__data {
-    padding: 16rem;
-    max-width: 900rem;
+    padding: 16px;
+    max-width: 900px;
     margin: auto;
   }
 
   &__category {
-    padding: 16rem 0;
+    padding: 16px 0;
   }
 
   &__general-info {
-    padding-bottom: 16rem;
+    padding-bottom: 16px;
   }
   &__header {
     display: none;
@@ -35,7 +35,7 @@
 .lightsaber-border {
   border-radius: 12px;
   border: 3px solid $STARWARS_COLOR;
-  box-shadow: 0 0 15px $STARWARS_COLOR, inset 0 0 15px $STARWARS_COLOR;
+  // box-shadow: 0 0 15px $STARWARS_COLOR, inset 0 0 15px $STARWARS_COLOR;
   overflow: hidden;
   height: 240px;
   aspect-ratio: 1;
@@ -48,7 +48,7 @@
 }
 
 .loading-container {
-  margin-top: 52rem;
+  margin-top: 52px;
   display: flex;
   justify-content: center;
   align-items: center;
