--- a/src/index.scss
+++ b/src/index.scss
@@ -6,9 +6,9 @@
   padding: 0;
   @include fontStack();
   text-decoration: none;
-  font-size: 16rem;
+  font-size: 16px;
 }
 
-html {
-  font-size: 6.25%;
-}
+// html {
+//   font-size: 6.25%;
+// }
